syntax = "proto3";

package rpc;

// The greeting service definition.
service Store {
  // Sends a greeting
  rpc SetValue (KeyValueRequest) returns (Record) {}
  rpc GetValue (KeyRequest) returns (Record) {}
  rpc DeleteValue (KeyRequest) returns (DeletedRecord) {}
}

// Send A Key-Value
message KeyValueRequest {
  string key = 1;
  string value = 2;
}

// Send a Key
message KeyRequest {
  string key = 1;
}

// Return a Record
message Record {
  string key = 1;
  string value = 2;
}

// Return a Empty Deleted Record
message DeletedRecord {}
